[package]
name = "sub_auction"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.0", default-features = false }
ink_metadata = { version = "3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0", default-features = false }
ink_storage = { version = "3.0", default-features = false }
ink_lang = { version = "3.0", default-features = false }
ink_prelude = { version = "3.0.0",  default-features = false }


scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

erc721 = { version = "3.0.0", path = "../erc721", default-features = false, features = ["ink-as-dependency"] }
erc20 = { version = "3.0.0", path = "../erc20", default-features = false, features = ["ink-as-dependency"] }
sub_address_registry= { version = "3.0.0", path = "../sub_address_registry", default-features = false, features = ["ink-as-dependency"] }
sub_token_registry = { version = "3.0.0", path = "../sub_token_registry", default-features = false, features = ["ink-as-dependency"] }
sub_marketplace = { version = "3.0.0", path = "../sub_marketplace", default-features = false, features = ["ink-as-dependency"] }
sub_bundle_marketplace = { version = "3.0.0", path = "../sub_bundle_marketplace", default-features = false, features = ["ink-as-dependency"] }


[lib]
name = "sub_auction"
path = "lib.rs"
crate-type = ["cdylib","rlib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
    "erc721/std",
    "erc20/std",
    "sub_address_registry/std",
    "sub_token_registry/std",
    "sub_marketplace/std",
    "sub_bundle_marketplace/std",
]
ink-as-dependency = []
[profile.release]
overflow-checks = false