[package]
name = "sub_marketplace"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.0", default-features = false }
ink_metadata = { version = "3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0", default-features = false }
ink_storage = { version = "3.0", default-features = false }
ink_lang = { version = "3.0", default-features = false }
ink_prelude = { version = "3.0.0",  default-features = false }


scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
erc1155 = { version = "3.0.0", path = "../erc1155", default-features = false, features = ["ink-as-dependency"] }
erc721 = { version = "3.0.0", path = "../erc721", default-features = false, features = ["ink-as-dependency"] }
erc20 = { version = "3.0.0", path = "../erc20", default-features = false, features = ["ink-as-dependency"] }
sub_address_registry= { version = "3.0.0", path = "../sub_address_registry", default-features = false, features = ["ink-as-dependency"] }
sub_token_registry = { version = "3.0.0", path = "../sub_token_registry", default-features = false, features = ["ink-as-dependency"] }
sub_bundle_marketplace = { version = "3.0.0", path = "../sub_bundle_marketplace", default-features = false, features = ["ink-as-dependency"] }
sub_art_factory = { version = "3.0.0", path = "../sub_art_factory", default-features = false, features = ["ink-as-dependency"] }
sub_art_factory_private = { version = "3.0.0", path = "../sub_art_factory_private", default-features = false, features = ["ink-as-dependency"] }
# sub_art_tradable = { version = "3.0.0", path = "../sub_art_tradable", default-features = false, features = ["ink-as-dependency"] }
# sub_art_tradable_private = { version = "3.0.0", path = "../sub_art_tradable_private", default-features = false, features = ["ink-as-dependency"] }
sub_nft_factory = { version = "3.0.0", path = "../sub_nft_factory", default-features = false, features = ["ink-as-dependency"] }
sub_nft_factory_private = { version = "3.0.0", path = "../sub_nft_factory_private", default-features = false, features = ["ink-as-dependency"] }
# sub_nft_tradable = { version = "3.0.0", path = "../sub_nft_tradable", default-features = false, features = ["ink-as-dependency"] }
# sub_nft_tradable_private = { version = "3.0.0", path = "../sub_nft_tradable_private", default-features = false, features = ["ink-as-dependency"] }
sub_price_seed = { version = "3.0.0", path = "../sub_price_seed", default-features = false, features = ["ink-as-dependency"] }
sub_artion = { version = "3.0.0", path = "../sub_artion", default-features = false, features = ["ink-as-dependency"] }
# sub_auction = { version = "3.0.0", path = "../sub_auction", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "sub_marketplace"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
    "erc1155/std",
    "erc721/std",
    "erc20/std",
    "sub_address_registry/std",
    "sub_token_registry/std",
    "sub_bundle_marketplace/std",
    "sub_price_seed/std",
]
ink-as-dependency = []
[profile.release]
overflow-checks = false